--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "tower1229@gmail.com",
   "license": "GPL-3.0",
   "dependencies": {
-    "cheerio": "^0.22.0",
-    "request": "^2.81.0"
+    "cheerio": "^0.22.0"
   }
 }
